# quasivision

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md
.github/workflows/: release.yml
demo/output/reality/: elements.tree.json  elements.tree.txt  objects.tree.json  objects.tree.txt
demo/output/realityAndUi/: elements.tree.json  elements.tree.txt  objects.tree.json  objects.tree.txt
demo/output/ui/: elements.tree.json  elements.tree.txt  objects.tree.json  objects.tree.txt
src/: bbox.rs  color.rs  component.rs  config.rs  download.rs  element.rs  export.rs  icon_classifier.rs  lib.rs  main.rs  merger.rs  object_detector.rs  preprocess.rs  text_detection.rs
src/detection/: block.rs  classification.rs  connected_components.rs  icon_detection.rs  line_removal.rs  merge_filter.rs  mod.rs  sub_components.rs
